# agentsmith

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Jenkinsfile  Jenkinsfile.FreeBSD  Jenkinsfile.Linux  Jenkinsfile.NetBSD  Jenkinsfile.OpenBSD  Jenkinsfile.Solaris  LICENSE  Makefile.am  Makefile.boot  Makefile.boot~  NEWS  README  configure.ac  indent.pro
doc/: Makefile.am  agentsmith.conf.man.in  agentsmith.man.in  agentsmith_exclude.man.in  sshsentinel.conf.man.in  sshsentinel.man.in
example/: Makefile.am  action.sh.in  action.sh.iptables.in  action.sh.mail.in  action.sh.pf.in  agentsmith.conf.in  agentsmith.xml.in  exclude.example.in  sshsentinel.conf  sshsentinel.conf.in  sshsentinel.in  sshsentinel.xml.in
m4/: ax_check_sunpro_c.m4
src/: Makefile.am  cfg.c  cfg.h  exclude.c  exclude.h  follow.c  follow.h  globals.h  main.c  malloc.c  output.c  output.h  records.c  records.h  regex.c  regex.h  sighandler.c  sighandler.h  threads.c  threads.h
src/network/: Makefile.am  netshared.c  netshared.h  netssl.c  netssl.h  sslutils.c  sslutils.h
src/network/cli/: Makefile.am  client.c  client.h  clientqueue.c  clientqueue.h
src/network/srv/: Makefile.am  server.c  server.h  worker.c  worker.h
tests/: Makefile.am  exclude1.c  records1.c  records2.c  records3.c  records4.c  records5.c  records6.c  records7.c
